--- a/css/login.css
+++ b/css/login.css
@@ -1,2 +1,61 @@
-@import url(style.css) root;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
+:root {
+  --cor-primaria: #00FF76;
+  --cor-secundaria: #3B3943;
+}
 
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  color: white;
+  padding: 0;
+  margin: 0;
+  background-color: #15141C;
+  font-family: 'Poppins', sans-serif;
+  overflow-x: hidden !important;
+  height: 100vh;
+}
+main {
+  width: 100%;
+  height: 100%;
+}
+.container {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+.container img {
+  margin-bottom: auto;
+  margin-top: 5rem;
+  width: 90%;
+}
+.action {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0rem 2rem 2rem 2rem;
+}
+.action h1{
+  font-size: 180%;
+  width:100%;
+  margin-bottom: 2.5rem;
+}
+.action button {
+  width: 100%;
+  padding: 1rem;
+  font-family: 'Poppins', sans-serif;
+  font-weight: bolder;
+  font-size: 18px;
+  background-color: var(--cor-primaria);
+  border: none;
+  border-radius: 25px;
+}
+.action p {
+  align-self: center;
+}
