--- a/css/welcome.css
+++ b/css/welcome.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
+
 :root {
   --cor-primaria: #00FF76;
   --cor-secundaria: #3B3943;
@@ -16,13 +17,15 @@ body {
   margin: 0;
   background-color: #15141C;
   font-family: 'Poppins', sans-serif;
-  overflow-x: hidden !important;
+  overflow: hidden;
   height: 100vh;
 }
+
 main {
   width: 100%;
   height: 100%;
 }
+
 .container {
   height: 100%;
   display: flex;
@@ -30,22 +33,26 @@ main {
   flex-direction: column;
   justify-content: flex-end;
 }
+
 .container img {
   margin-bottom: auto;
-  margin-top: 5rem;
+  margin-top: auto;
   width: 90%;
 }
+
 .action {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   padding: 0rem 2rem 2rem 2rem;
 }
-.action h1{
-  font-size: 180%;
-  width:100%;
+
+.action h1 {
+  font-size: 170%;
+  width: 100%;
   margin-bottom: 2.5rem;
 }
+
 .action button {
   width: 100%;
   padding: 1rem;
@@ -56,6 +63,20 @@ main {
   border: none;
   border-radius: 25px;
 }
+
 .action p {
   align-self: center;
+  margin-top: 0.8rem;
+  font-size: 0.9rem;
+}
+
+.action>p>a {
+  color: var(--cor-primaria);
+  text-decoration: none;
+}
+
+.action button:active {
+  background-color: #15141C;
+  color: var(--cor-primaria);
+  outline: 4px solid var(--cor-primaria);
 }
