--- a/css/register.css
+++ b/css/register.css
@@ -13,41 +13,77 @@ body {padding: 0; margin: 0; font-family: 'Poppins', sans-serif; background-colo
     width: 100%;
     height: 100vh;
     align-items: center;
-    justify-content: flex-start;  
+    justify-content: center;
 }
 
 .card-register {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: solid 3px green;
   width: 25rem;
 }
 
 .card-register form {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   width: 100%;
   padding: 1rem;
-  img {
-    margin-bottom: 1rem;
-    width: 70%;
-  }
   h3 {
-    margin-bottom: 3rem;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
+    color: var(--cor-primaria);
+    margin: 1rem 0rem;
   }
   .fieldgroup{
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 0.7rem;
 
   }
   .fieldset {
     display: flex;
     flex-direction: column;
+    gap: 0.4rem;
     width: 100%;
+    input {
+      padding: 0.8rem 0.8rem;
+      border: none;
+      background-color: var(--cor-secundaria);
+      border-radius: 15px;
+      font-family: 'Poppins', sans-serif;
+      font-size: 1rem;
+      color: white;
+    }
+    input:focus {
+      outline: none;
+    }
+    ::placeholder{
+      font-size: medium;
+    }
     }
 }
+.botao-form {
+  margin-top: 0.5rem;
+  display: flex;
+  align-self: center;
+  button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    width: 20rem;
+    padding: 0.8rem 0.5rem;
+    background-color: var(--cor-primaria);
+    color: var(--cor-background);
+    font-family: 'Poppins', sans-serif;
+    border-radius: 20px;
+    font-weight: bold;
+    font-size: 17px;
+  }
+}
+
 
 
 
