--- a/css/login.css
+++ b/css/login.css
@@ -20,8 +20,8 @@ body {padding: 0; margin: 0; font-family: 'Poppins', sans-serif; background-colo
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     box-shadow: 0px 0px 5px rgb(49, 49, 49);
-    width: 100%;
     height: 60%;
     border-radius: 20px;
     padding: 1.5rem;
@@ -30,6 +30,11 @@ body {padding: 0; margin: 0; font-family: 'Poppins', sans-serif; background-colo
         color: var(--cor-primaria);
         text-align: center;
         font-size: 1.8rem;
+    }
+    p > a {
+      cursor: pointer;
+      color: var(--cor-primaria);
+      text-align: center;
     }
 }
 form {width: 100%;}
@@ -67,12 +72,13 @@ form {width: 100%;}
     margin-top: 1rem;
     display: flex;
     align-self: center;
+    width: 100%;
     button {
       display: flex;
       align-items: center;
       justify-content: center;
       border: none;
-      width: 15rem;
+      width: 100%;
       padding: 0.8rem 0.5rem;
       background-color: var(--cor-primaria);
       color: var(--cor-background);
