--- a/css/register.css
+++ b/css/register.css
@@ -90,6 +90,7 @@ body {padding: 0; margin: 0; font-family: 'Poppins', sans-serif; background-colo
   }
 }
 
-
-
-
+.login {
+  cursor: pointer;
+  color: var(--cor-primaria);
+}
